# system_software_lab3

./: .gitignore  CMakeLists.txt
src/: api.c  common_state.c  main.c
src/client/: client.c  client_logic.c  client_state.c
src/client/input/: client_add_listener.c  client_arrows_listener.c  client_delete_listener.c  client_edit_listener.c  client_enter_listener.c  client_input.c  client_tab_listener.c  client_text_editor_input_listener.c
src/client/ui/: renderer.c  screen_buffer.c
src/include/: api.h  common_state.h  constraints.h
src/include/client/: client.h  client_logic.h  client_state.h
src/include/client/input/: client_add_listener.h  client_arrows_listener.h  client_delete_listener.h  client_edit_listener.h  client_enter_listener.h  client_input.h  client_tab_listener.h  client_text_editor_input_input.h
src/include/client/ui/: colors.h  renderer.h  screen_buffer.h
src/include/server/: server.h  server_logic.h  server_state.h
src/include/util/: mem_util.h
src/server/: server.c  server_logic.c  server_state.c
src/util/: mem_util.c
